# polydictions

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  README.md  api_server.py  bot.py  docker-compose.yml  pyproject.toml
chrome-extension/: README.md  background.js  logo.avif  manifest.json  popup.css  popup.html  popup.js
features/: __init__.py  alerts.py  categories.py  news_tracker.py  watchlist.py
src/: __init__.py  main.py
src/api/: __init__.py  server.py
src/bot/: __init__.py  bot.py
src/bot/handlers/: __init__.py  alerts.py  common.py  deal.py  filters.py  watchlist.py
src/bot/middlewares/: __init__.py  database.py  errors.py  rate_limit.py
src/config/: __init__.py  constants.py  settings.py
src/database/: __init__.py  connection.py  models.py  repository.py
src/services/: __init__.py  alert_monitor.py  event_monitor.py  news_monitor.py  polymarket.py
src/utils/: __init__.py  formatters.py  helpers.py  http.py  validators.py
tests/: __init__.py  conftest.py
tests/unit/: test_helpers.py  test_repository.py  test_validators.py
